@@ -179,6 +179,7 @@ This chapter lists all available components.
 \input{gltargetdistantlight.tex}
 \input{glfreedistantlight.tex}
 \input{spotlight3ds.tex}
+\input{mayaspotlight.tex}
 \input{rmlightsource.tex}
 \input{ribarchive.tex}
 \input{odejoints.tex}
