@@ -1,0 +1,38 @@
+% MayaSpotLight
+
+\section{\class{MayaSpotLight} ---
+         Maya spot light}
+
+\begin{classdesc}{MayaSpotLight}{name = "MayaSpotLight",\\ 
+                       enabled = True,\\
+                       color = (1,1,1),\\
+                       intensity = 1.0,\\
+                       decayRate = 0,\\
+                       coneAngle = 40,\\
+                       penumbraAngle = 40,\\
+                       dropoff = 0,\\
+                       useDepthMapShadows = False,\\
+                       dmapResolution = 512,\\
+                       useMidDistDmap = True,\\
+                       useDmapAutoFocus = True,\\
+                       dmapFocus = 90.0,\\
+                       dmapFilterSize = 1,\\
+                       dmapBias = 0.001,\\
+	               target = (0,0,0)
+                  }
+
+\var{enabled} is a boolean flag that can be used to turn the light source
+on or off.
+
+\var{intensity} is the overall intensity of the light source. The higher
+the value, the brighter the light.
+
+\var{color} defines the color of the light source. It must be a sequence
+of 3 floats containing RGB values.
+
+...
+
+\var{target} is the target point that the light source aims at.
+
+\end{classdesc}
+
